fix img-wrap in in breakpoint 768

--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -269,9 +269,6 @@
 
   .feature-item {
       width: 68%;
-      .img-wrap {
-          height: 80px;
-      }
       margin-bottom: 40px;
   }
 
